<resources>
    <!--General-->
    <string name="app_name">deandreamatias</string>
    <!--Main activity-->
    <string name="label_reversed">Reversed:</string>
    <string name="label_response">Response:</string>
    <!--List activity-->
    <string name="btn_activity_list">Go to activity list</string>
    <string name="btn_call_service">Call service</string>
    <string name="btn_add">Add</string>
    <string name="field_add_hint">Number of list items</string>
    <string name="btn_remove_all">Remove all entries</string>
    <string name="btn_sort">Sort ascending</string>
    <string name="label_list">Number list</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
